templates/ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create EC2 Instances


Parameters: 
  PublicSubnetId:
    Type: String
  PrivateSubnetId:
    Type: String
  VPCId:
    Type: String
  

Resources:
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via specific IP
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - CidrIp: 192.168.1.1/32
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp

  
  PrivateSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access from Public instance
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !GetAtt PublicSecurityGroup.GroupId
        - IpProtocol: icmp 
          FromPort: -1
          ToPort: -1
          SourceSecurityGroupId: !GetAtt PublicSecurityGroup.GroupId
  

  PublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0cde6390e61a03eee
      SecurityGroupIds:
        - !Ref PublicSecurityGroup
      SubnetId: !Ref PublicSubnetId
      KeyName: my_key_pair
      Tags:
        - Key: Name
          Value: "Group-20-Public-EC2-Instance"
    
  PrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-02817b620887e8913
      NetworkInterfaces:
        - GroupSet:
          - !Ref PrivateSecurityGroup
          AssociatePublicIpAddress: true
          DeviceIndex: 0
          DeleteOnTermination: true
          SubnetId: !Ref PrivateSubnetId
      KeyName: my_key_pair
      Tags:
        - Key: Name
          Value: "Group-20-Private-EC2-Instance"
    


Outputs:
  PublicEC2Instance:
    Description: Public EC2 Instance
    Value: !Ref PublicEC2Instance
  PrivateEC2Instance:
    Description: Private EC2 Instance
    Value: !Ref PrivateEC2Instance
